# knot

./: .gitignore  README.md  midplan.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/knot/: __init__.py  config.py  main.py
backend/src/knot/agents/: __init__.py  base.py  corporate_intel.py  data_custodian.py  fto_analyst.py  integration.py  landscaping.py  market_analyst.py  router.py  scraper.py  validity_researcher.py
backend/src/knot/api/: __init__.py  dependencies.py  routes.py
backend/src/knot/deepagent/: __init__.py  agent_factory.py  response.py  skill_loader.py  subagents.py  tools.py
backend/src/knot/deepagent/skills/corporate/: SKILL.md
backend/src/knot/deepagent/skills/fto/: SKILL.md
backend/src/knot/deepagent/skills/landscape/: SKILL.md
backend/src/knot/deepagent/skills/market/: SKILL.md
backend/src/knot/mock_data/: companies.json  patents.json  prior_art.json  products.json  seed.py
backend/src/knot/models/: __init__.py  company.py  fto.py  landscape.py  messages.py  patent.py  product.py  query.py  validity.py
backend/src/knot/services/: __init__.py  clustering.py  graph_traversal.py  llm_service.py  similarity.py  text_processing.py
backend/src/knot/stores/: __init__.py  graph_store.py  patent_store.py  search_store.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/property/: strategies.py  test_properties.py
backend/tests/unit/: test_agents.py  test_graph_traversal.py  test_similarity.py  test_stores.py  test_text_processing.py
docs/: agents.md  api-reference.md  (+3 more)
(+29 files in other folders)
